# shreyasislocked

./: .gitignore  404.html  Cargo.toml  Namita  apps.html  emulator.html  games.html  history.html  index.html  package.json  play.html  proxy.html  server.ts  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
css/: style.css
games/: index.html
games/html5/flappy-bird/: index.html
games/html5/pacman/: index.html
games/html5/tetris/: index.html
js/: main.js
proxy/: index.html  sw.js
public/games/emulator/: index.html
public/games/html5/2048/: index.html
public/games/html5/cookie-clicker/: index.html
public/games/html5/minesweeper/: index.html
public/games/html5/snake/: index.html
public/games/io/: index.html
public/uv/: sw.js
rust-search/: Cargo.toml
rust-search/src/: lib.rs
rust-server/: Cargo.toml
rust-server/src/: bare.rs  main.rs
scripts/: copy-deps.ts
src/: types.ts
src/lib/: cdn.ts  cloak.ts  history.ts  motion.ts  panic.ts  paths.ts  search.ts  shell.ts  sidebar.ts  uv.ts  wasm.d.ts
src/pages/: apps.ts  emulator.ts  games.ts  history.ts  home.ts  notfound.ts  play.ts  proxy.ts  settings.ts
src/styles/: style.css
